--- a/Global Solution - Front/styles/home.css
+++ b/Global Solution - Front/styles/home.css
@@ -146,7 +146,7 @@ main {
 .imagens3 img {
     display: flex;
     flex-direction: column;
-    margin-top: 1rem;
+    margin-top: 3%;
     width: 25%;
     height: auto;
 }
