--- a/Global Solution - Front/styles/home.css
+++ b/Global Solution - Front/styles/home.css
@@ -3,6 +3,10 @@
     box-sizing: border-box;
 }
 
+html, body {
+    scroll-behavior: smooth;
+}
+
 body {
     font-family: Arial, sans-serif;
     background-color: rgb(7, 109, 168);
